# selenium_learning

./: .gitignore  main.py  pyproject.toml
