[tool.poetry]
name = "selenium-learning"
version = "0.1.0"
description = ""
authors = ["André Carvalho <alac1984@gmail.com>"]
readme = "README.md"
packages = [{include = "selenium_learning"}]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.7.2"
pynvim = "^0.4.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
mypy = "^0.991"
flake8 = "^6.0.0"
black = "^22.12.0"
flake8-pyproject = "^1.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
